# sudoku

./: Cargo.toml  build.rs
src/: board.rs  config.rs  lib.rs  main.rs  solver.rs
src/gui/: app.rs  board.rs  cell.rs  grid.rs  gridcell.rs  keys.rs  mod.rs
