[package]
name = "ukodus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.1"
druid = { git = "https://github.com/linebender/druid", rev = "bc1877b76" }
owo-colors = "3.4.0"
thiserror = "1.0.31"
tracing = "0.1.35"
tracing-subscriber = "0.3.12"

[profile.release]
lto = "thin"
# Uncomment as necessary for debugging
# debug = true
