[package]
name = "sudoku"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitstream-io = "1.5.0"
color-eyre = "0.6.1"
owo-colors = "3.4.0"
rand = "0.8.5"
thiserror = "1.0.31"
tracing = "0.1.35"
tracing-subscriber = "0.3.12"

[build-dependencies]
bitstream-io = "1.5.0"
color-eyre = "0.6.1"

[profile.release]
lto = "thin"
# Uncomment as necessary for debugging
# debug = true
